--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  bloc: ^7.1.0
+  flutter_bloc: ^7.2.0 
+  dio: ^4.0.0
+  hexcolor: ^2.0.5
+  shared_preferences: ^2.0.6
+  webview_flutter: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,11 +61,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
