--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   hexcolor: ^2.0.5
   shared_preferences: ^2.0.6
   webview_flutter: ^2.1.1
-
+  smooth_page_indicator: ^1.0.0+2
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
