--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,16 @@ dependencies:
     sdk: flutter
   bloc: ^7.1.0
   flutter_bloc: ^7.2.0 
-  dio: ^4.0.0
+  dio: ^4.0.4
   hexcolor: ^2.0.5
   shared_preferences: ^2.0.6
   smooth_page_indicator: ^1.0.0+2
-  
+  dio_helper: ^1.1.3
+  fluttertoast: ^8.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
